the back button no longer overlaps the last movement

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -444,7 +444,7 @@ body {
 .movements {
 	list-style: none;
 	padding:0px;
-	margin:0px;
+	margin:0px 0px 4em 0px;
 }
 
 .movement-reps, .movement-sets {
